src/App.css
@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sanss");
@import "slick-carousel/slick/slick.css";
@import "slick-carousel/slick/slick-theme.css";

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
body {
  font-family: "Open Sans", sans-serif;
  width: 100vw;
  height: 100vh;
  overflow-x: hidden;
}
html {
  scroll-behavior: smooth;
}

.COM {
  color: #1bbd36;
}
.slider_img {
  display: block;
  width: 100%;
  height: 700px !important;
}

.logo span {
  margin: 0;
  padding: 0;
  font-size: 28px;
  line-height: 1;
  font-weight: 700;
  letter-spacing: 0.5px;
  text-transform: uppercase;
}
.Navbar {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 20px 0 20px 0;
  box-shadow: 0px 2px 15px rgb(0 0 0 / 10%);
  /* margin-right: auto;
  margin-left: auto; */

  /* position: fixed; */
  width: 100%;
  background-color: white;
}

.nav__links {
  display: flex;

  gap: 15px;
  list-style-type: none;
  text-decoration: none;
  transition: 0.3s;
  font-size: 13px;
  text-transform: uppercase;
  font-weight: 600;
  font-family: "Roboto", sans-serif;
}

a {
  text-decoration: none;
  color: #4d4643;
}

a:hover {
  color: #1bbd36;
}
.combain {
  display: flex;
  gap: 40px;
}
.icon {
  display: flex;
  gap: 10px;
  color: #a0a0a0;
}

svg:hover {
  color: #1bbd36;
}

.home {
  color: #1bbd36;
}

.img_text {
  position: absolute;
  top: 250px;
  left: 30%;
  width: 60%;
  background: rgba(4, 4, 4, 0.7);
  padding: 20px;
  color: #fff;
  border-top: 5px solid #1bbd36;
}
.img_text h1 {
  color: #fff;
  margin-bottom: 20px;
  font-size: 28px;
  font-weight: 700;
}
.img_text p {
  margin-bottom: 1rem;
}
.img_text button {
  font-family: "Roboto", sans-serif;
  font-weight: 500;
  font-size: 14px;
  letter-spacing: 1px;
  display: inline-block;
  padding: 12px 32px;
  border-radius: 4px;

  line-height: 1;
  margin: 10px;
  color: #fff;
  border: 2px solid #1bbd36;
  background-color: #424243;
  margin-left: 300px;
  height: fit-content;
}
.img_text button:hover {
  background-color: #1bbd36;
}

/****** About Us ********/

.title {
  font-size: 32px;
  font-weight: bold;
  text-transform: uppercase;
}
.about h1 {
  text-align: center;
  margin-top: 80px;
  margin-bottom: 20px;
}
.about__body h1 {
  font-weight: 700;
  font-size: 42px;
  line-height: 60px;
  margin-bottom: 20px;
  text-transform: uppercase;
  font-family: "Montserrat", sans-serif;
}
.about__body h3 {
  font-weight: 500;
  line-height: 32px;
  font-size: 24px;
  font-family: "Montserrat", sans-serif;
}

.about_us {
  display: flex;
  justify-content: space-evenly;
  margin-top: 60px;
  margin-bottom: 60px;
}

.about__right {
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.5;
  color: #212529;
  text-align: left;
}

.start {
  margin-bottom: 20px;
}

li {
  list-style-type: none;
  padding: 8px;
  width: 100%;
}
.end {
  margin-top: 20px;
}

.check svg {
  color: #1bbd36;
  margin-right: 20px;
}

/***Services ***/
.services_parts {
  background-color: #f0f0f0e1;
  padding: 1px 0 1px 0;
}

.services h1 {
  text-align: center;

  margin-bottom: 20px;
}
.servc__title {
  margin-top: 80px;
  font-size: 32px;
  font-weight: bold;
  text-transform: uppercase;
}
.services p {
  text-align: center;
  font-size: 20px;
  font-weight: 400;
  margin-top: 20px;
  margin-bottom: 20px;
}

/***** Cards section ******/
.cards {
  padding: 20px 110px 20px 110px;

  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-auto-rows: auto;

  gap: 20px;
  margin-bottom: 50px;
}

.card {
  text-align: center;
  padding: 120px 20px 80px 20px;
  background-color: #fff;
}
.card h1 {
  font-size: 22px;
  padding: 10px 0 20px 0;
}

.card p {
  line-height: 24px;
  font-size: 14px;
}
.meter {
  height: 50px;
  font-size: 45px;
}

/**** PortFolio***/

.prtfl__title {
  text-align: center;
}

.portfolio h1 {
  margin-top: 60px;
  font-size: 32px;
  font-weight: bold;
  text-transform: uppercase;
}

.images {
  display: grid;
  grid-template-columns: repeat(3, auto);
  grid-template-rows: auto;

  padding: 40px 50px 40px 50px;
  gap: 20px;
}

.img1 {
  height: 250px;
  font-size: 15px;
}
.img5 {
  height: 400px;
}
.img4 {
  height: 300px;
}

/****  Footer ******/

.footer {
  background-color: #1e1e1e;
  width: 100%;
}
.up__parts {
  display: flex;
  justify-content: space-evenly;
  padding: 60px 0 80px 0;

  color: #fff;
  height: 40%;
}
.null {
  font-size: 18px;
  color: #1bbd36;
}
li {
  display: flex;
  align-items: center;
  gap: 8px;
}
.join {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.join h1,
.Our__Services h1,
.useful h1,
.company h1 {
  font-size: 22px;
  margin: 0 0 10px 0;
  padding: 2px 0 2px 0;
  line-height: 1;
  font-weight: 500;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: #fff;
}
.join p,
.list_item,
.company p {
  font-size: 18px;
  line-height: 24px;
  margin-bottom: 0;
  font-family: "Roboto", sans-serif;
  color: rgba(255, 255, 255, 0.7);
  padding-bottom: 20px;
}
.list_item li:hover {
  color: #e2e7ec;
  cursor: pointer;
}
.form_input {
  display: flex;
  border-radius: 100px;
  width: 300px;
  height: 35px;
}

.Subscribe {
  width: 35%;
  background-color: #1bbd36;
  color: #fff;
  cursor: pointer;
  font-size: 18px;
  border: none;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
}
.Subscribe:hover {
  background-color: #2ff14f;
}

.down__parts {
  display: flex;
  justify-content: space-between;
  padding: 20px 100px 20px 100px;
  background-color: black;
  color: #fff;
}

.footer__icon {
  display: flex;
  gap: 8px;
  font-size: 25px;
}

.copyrighy a {
  color: #1bbd36;
}

/**** Contact page *****/
.container {
  width: 100vw;
  height: auto;
}

.location {
  display: flex;
  gap: 15px;
  padding: 50px 0 30px 50px;
}
.loc {
  display: flex;
  flex-direction: column;
  gap: 10px;
}
.loc p {
  line-height: 35px;
}
.location span {
  font-size: 45px;
  color: #1bbd36;
}
/* ... */

